# frugalos

./: .travis.yml  Cargo.toml
docker/frugalos/: frugalos.yml
frugalos_config/: Cargo.toml
frugalos_config/schema/: config.proto
frugalos_config/src/: cluster.rs  error.rs  protobuf.rs  service.rs
frugalos_core/: Cargo.toml
frugalos_core/src/: lib.rs  macros.rs  prometheus.rs
frugalos_mds/: Cargo.toml
frugalos_mds/src/: config.rs  error.rs  lib.rs  machine.rs  server.rs  service.rs
frugalos_mds/src/node/: handle.rs  mod.rs  node.rs
frugalos_raft/: Cargo.toml
frugalos_raft/src/: raft_io.rs  test_util.rs  util.rs
frugalos_raft/src/storage/: log_suffix.rs  mod.rs
frugalos_raft/src/storage/log_prefix/: delete.rs  load.rs  mod.rs
frugalos_segment/: Cargo.toml
frugalos_segment/src/: config.rs  error.rs  service.rs  synchronizer.rs
frugalos_segment/src/client/: mds.rs  mod.rs  storage.rs
frugalos_segment/src/queue_executor/: repair_queue_executor.rs
it/scripts/: http_requests.sh
it/testsuites/: args.sh  start_frugalos.sh
scripts/: setup_debug_cluster.sh
src/: bucket.rs  client.rs  daemon.rs  error.rs  lib.rs  main.rs  rpc_server.rs  server.rs  service.rs
tests/: start_test.rs
tests/common/: frugalos.rs  mod.rs
